--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "scripts": {
     "build": "js-compute-runtime src/index.js bin/main.wasm",
     "start": "fastly compute serve --watch",
-    "deploy": "fastly compute publish"
+    "deploy": "fastly compute publish",
+    "purge": "fastly purge --all"
   }
 }
